Logica de negocio actualizada